igt@i915_selftest@live@workarounds - dmesg-fail - *ERROR* REF workaround lost on before reset! (reg[26c0]=0x100, relevant bits were 0x100 vs expected 0x3ff)
<7> [296.046774] [drm:reference_lists_init [i915]] Initialized 1 REF workarounds on ccs0
<7> [296.046928] [drm:__intel_engine_init_ctx_wa [i915]] Initialized 1 CTX_REF workarounds on ccs0
<7> [296.047081] [drm:reference_lists_init [i915]] Initialized 1 REF workarounds on ccs1
<7> [296.047235] [drm:__intel_engine_init_ctx_wa [i915]] Initialized 1 CTX_REF workarounds on ccs1
<7> [296.047388] [drm:reference_lists_init [i915]] Initialized 1 REF workarounds on ccs2
<7> [296.047550] [drm:__intel_engine_init_ctx_wa [i915]] Initialized 1 CTX_REF workarounds on ccs2
<7> [296.047705] [drm:reference_lists_init [i915]] Initialized 1 REF workarounds on ccs3
<7> [296.047860] [drm:__intel_engine_init_ctx_wa [i915]] Initialized 1 CTX_REF workarounds on ccs3
<3> [296.051214] [drm:wa_verify [i915]] *ERROR* REF workaround lost on before reset! (reg[26c0]=0x100, relevant bits were 0x100 vs expected 0x3ff)
<3> [296.100622] i915/intel_workarounds_live_selftests: live_gpu_reset_workarounds failed with error -3
<7> [296.100644] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling DC_off
<7> [296.100987] i915 0000:03:00.0: [drm:gen9_set_dc_state.part.15 [i915]] Setting DC state from 01 to 00
<7> [296.101369] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling PW_2
<7> [296.101611] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling PW_A
<7> [296.101841] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling PW_B
<7> [296.102067] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling PW_C
<7> [296.102292] i915 0000:03:00.0: [drm:intel_power_well_enable [i915]] enabling PW_D
<7> [296.104735] intel_gt_set_wedged called from intel_gt_set_wedged_on_fini+0x9/0x30 [i915]
<7> [296.193783] i915 0000:03:00.0: [drm:drm_client_release] drm_fb_helper
<4> [296.274081] i915: probe of 0000:03:00.0 failed with error -3
Edited by Tejasree Illipilli